Bug 219421 - K3b/German: apostrophes in audio patterns should not be translated
Summary: K3b/German: apostrophes in audio patterns should not be translated
Status: RESOLVED FIXED
Alias: None
Product: i18n
Classification: Translations
Component: de (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-20 14:04 UTC by S. Burmeister
Modified: 2009-12-21 22:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot showing that !a and other characters are used as part of the filename (11.39 KB, image/png)
2009-12-20 14:05 UTC, S. Burmeister
Details
screenshot of k3b help dialogue showing wrong syntax (18.33 KB, image/png)
2009-12-20 16:50 UTC, S. Burmeister
Details

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2009-12-20 14:04:22 UTC
Version:           1.69 (using KDE 4.3.4)
OS:                Linux
Installed from:    openSUSE RPMs

As you can see in the screenshot !a=, does not work, i.e. it is used as part of the filename and adds "{" and other characters to the filename.
Comment 1 S. Burmeister 2009-12-20 14:05:36 UTC
Created attachment 39189 [details]
screenshot showing that !a and other characters are used as part of the filename
Comment 2 Michał Małek 2009-12-20 15:28:28 UTC
Hi,
Looks like you mistyped the pattern. I see on the screenshot:
> %A - %T/%n - !a=,%A'{%a - }%t
instead of:
> %A - %T/%n - !a='%A'{%a - }%t
That's why the pattern was not recognized.
Comment 3 S. Burmeister 2009-12-20 16:50:07 UTC
I did not type anything, it's the default!

Next screenshot to show that the "," is even part of the help. So it's either a translation issue or a bug in k3b.
Comment 4 S. Burmeister 2009-12-20 16:50:52 UTC
Created attachment 39190 [details]
screenshot of k3b help dialogue showing wrong syntax
Comment 5 S. Burmeister 2009-12-20 16:56:22 UTC
Yep, the character that looks like a comma after the "a=" is a quotation mark, same for the "'" after "%A".

Please re-assign to the German translators in case only German is affected.
Comment 6 Michał Małek 2009-12-20 22:16:37 UTC
(In reply to comment #5)
> Yep, the character that looks like a comma after the "a=" is a quotation mark,
> same for the "'" after "%A".
> 
> Please re-assign to the German translators in case only German is affected.

I see. It looks like a translation issue, indeed.

I'm redirecting this report to i18n.
In short: apostrophes used in audio filename patterns should not be changed, as they are a part of pattern syntax (see: http://websvn.kde.org/trunk/extragear/multimedia/k3b/src/rip/k3bcddbpatternwidget.cpp?revision=938581&view=markup)
Comment 7 Frederik Schwarzer 2009-12-21 09:41:20 UTC
SVN commit 1064508 by schwarzer:

do not use fancy quites in pattern

this should really be "fixed" by the developers by adding appropriate
context information to the string. Translators cannot know these issues.

BUG: 219421

 M  +5 -5      k3b.po  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1064508
Comment 8 Frederik Schwarzer 2009-12-21 09:42:51 UTC
"quotes" that is. ;)
Comment 9 Thomas Reitelbach 2009-12-21 22:39:13 UTC
SVN commit 1064824 by reitelbach:

Add Comment to the original string to prevent other translators from translating the quotes.

BUG:219421


 M  +1 -1      k3bcddbpatternwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1064824
Comment 10 Michał Małek 2009-12-21 22:45:54 UTC
SVN commit 1064826 by mmalek:

Add quotation warning also for pattern description.
BUG: 219421

 M  +20 -19    k3bcddbpatternwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1064826