Add Comment to the original string to prevent other translators from translating the quotes.

BUG:219421

svn path=/trunk/extragear/multimedia/k3b/; revision=1064824